--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^10.2.5",
     "cache-loader": "^4.1.0",
-    "copy-webpack-plugin": "^5.0.0",
-    "css-loader": "^2.1.1",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.14.1",
+    "cssnano": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "postcss-comment": "^2.0.0",
-    "postcss-loader": "^3.0.0",
-    "pug": "^3.0.0",
+    "postcss-loader": "^5.2.0",
+    "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^7.1.0",
-    "sass-resources-loader": "^2.0.1",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "sass-loader": "^11.0.1",
+    "sass-resources-loader": "^2.2.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "bourbon": "^7.0.0",
-    "bourbon-sass-loader": "^0.1.0"
+    "bourbon-sass-loader": "^0.1.0",
+    "postcss": "^8.2.14"
   }
 }
