--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 use-php-template-data-cleaning = "1"
 return-array-from-macros-execution = "1"
 collapse-array-only-with-useless-key-in-data-cleaner = "1"
+default-currency = "EUR"
 
 [php-templater]
 extensions[] = "/templates/tb_2020/extensions/TemplatePhpExtension"
